# minipeg

./: .clang-format  .clangd  .cmake-format.py  .cmake-format.yaml  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  LICENSE  Makefile  README.md  makefile-bootloader.mk  minipeg-f423.jflash  oldmake
Libraries/: Makefile  stm32f0xx_conf.h
bootloader/: bootloader.cc
cmake/: common.cmake  f746.cmake
cubemx/: .mxproject  Makefile  g431C.ioc
cubemx-f423/: Makefile  mpeg-f423vhh.ioc
cubemx-f423/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
cubemx-f423/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cubemx-f746/: .mxproject  Makefile  STM32F746IEKx_FLASH.ld  cubemx-f746.ioc
cubemx-f746/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h
cubemx-f746/Core/Src/: adc.c  dac.c  gpio.c  main.c  stm32f7xx_it.c  tim.c
cubemx/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
cubemx/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
firmware-checks/test1_9e5270/: main.elf  main.hex  main.map
firmware-checks/works-eB78d8/: main.elf  main.hex  main.map
inc/: adc.h  analog_conditioning.h  buttons.h  cal_detent.h  calibration.h  dac.h  debounced_digins.h  delay.h  dig_inouts.h  env_transition.h  env_update.h  envelope.h  envelope_calcs.h  envelope_out.h  exti.h  flash.h  flash_user.h  globals.h  leds.h  log4096.h  math_util.h  params.h  pingable_env.h  pwm.h  settings.h  stm32f7xx_hal_conf.h  stm32g4xx_hal_conf.h  stm32xx.h  system_mode.h  timekeeper.h  timers.h  trigout.h
inc/hardware_tests/: hardware_test_dac.h  hardware_test_leds_buttons.h  hardware_test_util.h
lib/: Makefile
lib/CMSIS/Device/ST/STM32F0xx/Source/Templates/gcc_ride7/: startup_stm32f0xx.s
linker/: STM32F746IEKx_FLASH.ld  STM32F746IEKx_FLASH_BOOTLOADER.ld
src/: adc.c  adc.h  analog_conditioning.c  analog_conditioning.cc  analog_conditioning.h  buttons.c  cal_detent.c  cal_detent.h  calibration.c  calibration.cc  calibration.h  dac.cc  dac.cpp  dac.h  debounced_digins.c  debounced_digins.h  delay.c  delay.h  dig_inouts.c  dig_inouts.cc  dig_inouts.h  dig_inouts.hh  env_transition.c  env_transition.cc  env_transition.h  env_update.c  env_update.cc  envelope.c  envelope_calcs.c  envelope_calcs.cc  envelope_calcs.h  envelope_out.c  envelope_out.h  exti.c  flash.c  flash.h  flash_user.c  flash_user.cc  flash_user.h  flash_user.hh  (+34 more)
src/bootloader/: animation.cc  animation.hh  bl_utils.cc  bl_utils.hh  bootloader.cc  buttons.hh  gate_input.cc  gate_input.hh  gate_input_f423.cc  gate_input_f746.cc  leds.cc
src/bootloader/stm_audio_bootloader/fsk/: packet_decoder.h
src/f423-drivers/: CMakeLists.txt  adc.cc  adc_pins.h  bootloader_settings.hh  dig_inout_pins.h  dig_inout_pins.hh  dig_inouts.h  flash_layout.h  flash_layout.hh  flash_user_conf.h  pwm_pins.hh  startup.s  startup_stm32f423xx.s  system.cc
src/f746-drivers/: CMakeLists.txt  adc.cc  adc_pins.h  bootloader_settings.hh  dac.cc  debounced_digins.cc  dig_inout_pins.h  dig_inout_pins.hh  dig_inouts.c  flash.c  flash_layout.h  flash_layout.hh  flash_user_conf.h  pwm.cc  pwm_pins.hh  system.cc
src/g431-drivers/: adc.c  adc.cc  adc_pins.h  dac.cc  debounced_digins.c  debounced_digins.cc  dig_inout_pins.h  dig_inouts.h  flash.c  flash.cc  flash_layout.hh  flash_user_conf.h  pwm.cc  timekeeper.c  timekeeper.cc
src/hardware_tests/: hardware_test_adc.cc  hardware_test_adc.h  hardware_test_dac.cc  hardware_test_gates.cc  hardware_test_gates.h  hardware_test_leds_buttons.cc  hardware_test_util.cc  hardware_test_util.h  hardware_tests.cc
src/shareddrv/: debounced_digins.cc  flash.c  flash.cc  pwm.cc
stm32/: startup_stm32f0xx.s  stm32f030k6.ld  stm32f0xx_conf.h
stm32/HAL/Inc/: stm32g4xx_ll_bus.h
stm32/device/: STM32G070RBTx_FLASH.ld
stm32/device/stm32f4/: STM32F423VHHx_FLASH.ld  STM32F423VHHx_FLASH_BOOTLOADER.ld
stm32/device/stm32f4/Include/: stm32f4xx.h
stm32/device/stm32g431/: STM32G431C8Tx_FLASH.ld
tests/: CMakeLists.txt  HAL.h  globals.h  mock_flash.c  test_envelope.cc  test_flash_user.c  test_flash_user.h  tests_main.c  testtest.cc
tests/mocks/: mock_flash.c
